--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,3 +1,8 @@
+footer {
+  background-color: var(--footer-bg);
+  color: var(--footer-color);
+}
+
 .footer-wrapper {
   display: flex;
   flex-direction: column;
@@ -7,11 +12,14 @@
   margin: 0 auto;
   text-align: center;
 }
-
 .socials {
   display: flex;
   gap: 2.5rem;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
+}
+
+.fab {
+  color: var(--footer-color);
 }
