--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -5,18 +5,43 @@
   justify-items: center;
   gap: var(--gap);
   margin: 0 auto;
+  animation: example 3s ease-in-out;
+  transition: all 0.2s;
+}
+
+@keyframes example {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .hero-image {
   margin-top: 5rem;
+  width: 60ch;
+}
+
+.hero-content h1 {
+  color: var(--textColor);
 }
 
 .hero-content p {
   text-align: justify;
+  width: 40ch;
 }
 
 .cta {
   margin-top: 3rem;
   display: grid;
   justify-items: start;
+  background-color: var(--darkRed);
+  color: var(--lightBlue);
 }
